Debian BTS Bug #
	Debian BTS Bug #
	* cpphash.h (FIRST, LAST, CUR, RLIMIT): Fix definitions.
	* cpplib.c (destringize_and_run): Kludge around getting
	tokens from in-progress macros.
	(_cpp_do__Pragma): Simplify.
testsuite:
	* gcc.dg/cpp/_Pragma4.c: New test.

From-SVN: r56773

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,11 @@
+2002-09-03  Neil Booth  <neil@daikokuya.co.uk>
+
+	Debian BTS Bug #157416
+	* cpphash.h (FIRST, LAST, CUR, RLIMIT): Fix definitions.
+	* cpplib.c (destringize_and_run): Kludge around getting
+	tokens from in-progress macros.
+	(_cpp_do__Pragma): Simplify.
+
 2002-09-03  Steve Ellcey  <sje@cup.hp.com>
 
 	* config/ia64/ia64.h (EXTRA_SPECS): Remove cpp_cpu.
