--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,7 @@
+2002-09-03  Neil Booth  <neil@daikokuya.co.uk>
+
+	* gcc.dg/cpp/_Pragma4.c: New test.
+
 Tue Sep  3 11:04:26 2002  Nicola Pero  <n.pero@mi.flashnet.it>
 
 	* objc/execute/nil_method-1.m: New testcase.
