--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,5 +1,8 @@
 2002-09-03  Janis Johnson  <janis187@us.ibm.com>
 
+	* doc/install.texi: Fix typos, formatting problems, and obvious
+	overfull/underfull boxes.
+
 	* Makefile.in (TEXI_GCC_FILES): Add compat.texi.
 	* doc/gcc.texi (Top): Add new chapter, Binary Compatibility, and
 	include its file, compat.texi.
