--- a/libjava/ChangeLog
+++ b/libjava/ChangeLog
@@ -1,3 +1,9 @@
+2002-09-04  Michael Koch  <konqueror@gmx.de>
+
+	* java/net/SocketOptions.java: added static variables to be JDK 1.4
+	compatible (SO_BROADCAST, SO_OOBINLINE, IP_MULTICAST_IF2,
+	IP_MULTICAST_LOOP, IP_TOS
+
 2002-09-03  Tom Tromey  <tromey@redhat.com>
 
 	* java/lang/Class.h (_getDeclaredMethod): Declare.
