--- a/gcc/cp/ChangeLog
+++ b/gcc/cp/ChangeLog
@@ -1,3 +1,8 @@
+2002-09-04  Jakub Jelinek  <jakub@redhat.com>
+
+	* decl.c (start_cleanup_fn): Clear interface_only before
+	start_function, restore it afterwards.
+
 2002-08-31  Jason Merrill  <jason@redhat.com>
 
 	* cp-lang.c (cp_expr_size): Allow initialization from a
