--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,7 @@
+2002-09-04  Jakub Jelinek  <jakub@redhat.com>
+
+	* g++.dg/other/cxa-atexit1.C: New test.
+
 2002-09-03  Neil Booth  <neil@daikokuya.co.uk>
 
 	* gcc.dg/cpp/_Pragma4.c: New test.
