--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -2,6 +2,8 @@
 
 	* g++.dg/other/cxa-atexit1.C: New test.
 
+	* gcc.dg/typeof-2.c: New test.
+
 2002-09-01  Jakub Jelinek  <jakub@redhat.com>
 
 	* gcc.dg/typeof-1.c: New test.
