* gcc.dg/typeof-2.c: New test.
git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@56792 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -2,6 +2,8 @@
 
 	* g++.dg/other/cxa-atexit1.C: New test.
 
+	* gcc.dg/typeof-2.c: New test.
+
 2002-09-03  Neil Booth  <neil@daikokuya.co.uk>
 
 	* gcc.dg/cpp/_Pragma4.c: New test.
