--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,9 @@
+2002-09-04  Bob Wilson  <bob.wilson@acm.org>
+
+	* config/xtensa/elf.h (TARGET_SECTION_TYPE_FLAGS): Define to
+	xtensa_multibss_section_type_flags.
+	* config/xtensa/xtensa.c (xtensa_multibss_section_type_flags): Define.
+
 2002-09-04  Richard Henderson  <rth@redhat.com>
 
 	* doc/install-old.texi: Don't mention enquire.
