--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,15 @@
+2002-09-04  Janis Johnson  <janis187@us.ibm.com>
+
+	* doc/c-tree.texi: Fix overfull hboxes.
+	* doc/cppopts.texi: Ditto.
+	* doc/extend.texi: Ditto.
+	* doc/gty.texi: Ditto.
+	* doc/invoke.texi: Ditto.
+	* doc/makefile.texi: Ditto.
+	* doc/rtl.texi: Ditto.
+	* doc/standards.texi: Ditto.
+	* doc/tm.texi: Ditto.
+
 2002-09-04  Richard Henderson  <rth@redhat.com>
 
 	* c-common.c (builtin_define_with_hex_fp_value): New.
