--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+Wed Sep  4 18:48:10 2002  J"orn Rennecke <joern.rennecke@superh.com>
+
+	* combine.c (make_compound_operation): Don't generate zero / sign
+	extensions in floating point modes.
+
 2002-09-04  Janis Johnson  <janis187@us.ibm.com>
 
 	* doc/c-tree.texi: Fix overfull hboxes.
