* config/sparc/t-netbsd64: Disable multilib for now.
git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@56807 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2002-09-04  Jason Thorpe  <thorpej@wasabisystems.com>
+
+	* config/sparc/t-netbsd64: Disable multilib for now.
+
 2002-09-04  David Edelsohn  <edelsohn@gnu.org>
 
 	* target-def.h (TARGET_HAVE_SRODATA_SECTION): New macro.
