--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2002-09-04  Janis Johnson  <janis187@us.ibm.com>
+
+	* doc/trouble.texi (Interoperation): Update information about C++ ABI
+	issues.
+
 2002-09-04  Jason Thorpe  <thorpej@wasabisystems.com>
 
 	* config/sparc/t-netbsd64: Disable multilib for now.
